Added navbar & hyperlinks

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,8 @@
 
 <body>
     <h1> My pizza! </h1>
+    <nav>{% include 'navbar.html' %}</nav>
     <main>{% block content %}{% endblock %}</main>
+    <!--<a href = "/pizza/1">bread</a> -->
 </body>
 </html>
